Wrong material reported in particles settings when pinning them and selecting another object. #38359

Closed
opened 2014-01-25 04:45:15 +01:00 by gandalf3 · 19 comments
Member

System Information
Archlinux

Blender Version
Broken: 5cd3212

Short description of error
There are really three bugs, but they seemed related so I thought I would put them all here.

1.
Selecting a material in the drop down under Particles > Render with the particle type set as an object does nothing. The material of the instanced object is used, even if undefined.

2.
When pinning a properties panel to display only the particle system, the material which is displayed in the drop down as "selected" changes as the emitter or the instanced particle object is selected.

3.
The drop down only lists materials that are in material slots of the emitter object.

Exact steps for others to reproduce the error
Based on particle_bug.blend

Bug 1:

  1. Open attached file
  2. The particle material drop down will be set to the "Emitter" material (blue), however the actual particles will be displayed as the "Particles" material (red).
  3. Select the particle source object (the higher cube) and remove the material. The particles will display as the default gray.
  4. Select the emitter cube again. The drop down says they are using the "Emitter" material, however they never were.

Bug 2:

  1. Open attached file
  2. Select the particle source object (the cube that is higher up) while watching the material drop down in the pinned particle system panel. The material displayed as selected will change.

Bug 3:

  1. Open attached file
  2. Select the higher up cube and create a new material
  3. Select the lower cube and open the particle material drop down. The newly created material will not be listed.
**System Information** Archlinux **Blender Version** Broken: 5cd3212 **Short description of error** There are really three bugs, but they seemed related so I thought I would put them all here. **1.** Selecting a material in the drop down under *Particles > Render* with the particle type set as an object does nothing. The material of the instanced object is used, even if undefined. **2.** When pinning a properties panel to display only the particle system, the material which is displayed in the drop down as "selected" changes as the emitter or the instanced particle object is selected. **3.** The drop down only lists materials that are in material slots of the emitter object. **Exact steps for others to reproduce the error** Based on [particle_bug.blend](https://archive.blender.org/developer/F75362/particle_bug.blend) **Bug 1:** 1. Open attached file 2. The particle material drop down will be set to the "Emitter" material (blue), however the actual particles will be displayed as the "Particles" material (red). 3. Select the particle source object (the higher cube) and remove the material. The particles will display as the default gray. 4. Select the emitter cube again. The drop down says they are using the "Emitter" material, however they never were. **Bug 2:** 1. Open attached file 2. Select the particle source object (the cube that is higher up) while watching the material drop down in the pinned particle system panel. The material displayed as selected will change. **Bug 3:** 1. Open attached file 2. Select the higher up cube and create a new material 3. Select the lower cube and open the particle material drop down. The newly created material will not be listed.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Bastien Montagne self-assigned this 2014-01-25 08:59:57 +01:00

There is absolutely no bug here… the "Material" option of the particles only affects "usual" particles. When objects are duplicated as particles, it is obviously their materials that are used!

Will just disable that mat dropdown when Object or Group render types are selected…

There is absolutely no bug here… the "Material" option of the particles only affects "usual" particles. When objects are duplicated as particles, it is obviously their materials that are used! Will just disable that mat dropdown when Object or Group render types are selected…

This issue was referenced by blender/blender-addons-contrib@c7ac0edb34

This issue was referenced by blender/blender-addons-contrib@c7ac0edb342d78d3aece53cd128288fbae584b0d

This issue was referenced by c7ac0edb34

This issue was referenced by c7ac0edb342d78d3aece53cd128288fbae584b0d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit c7ac0edb34.

Closed by commit c7ac0edb34.
Author
Member

Ah, my bad.

What about bugs 2 and 3? They still occur in c7ac0ed even though the drop down is now disabled (3 only occurs when a different particle type is selected, of course).

Ah, my bad. What about bugs 2 and 3? They still occur in c7ac0ed even though the drop down is now disabled (3 only occurs when a different particle type is selected, of course).

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
  1. is not a bug! Particles use material slots, not directly materials themselves… So you only can use materials assigned to one of the emitter’s slots.

Point 2) is indeed an issue (material slots are referenced by their index, when active object changes, I guess this is the issue). Will check this.

3) is not a bug! Particles use material *slots*, not directly materials themselves… So you only can use materials assigned to one of the emitter’s slots. Point 2) is indeed an issue (material slots are referenced by their index, when active object changes, I guess this is the issue). Will check this.
Bastien Montagne changed title from Material selector for particles does nothing to Wrong material reported in particles settings when pinning them and selecting another object. 2014-01-29 07:22:17 +01:00

This issue was referenced by blender/blender-addons-contrib@289c5de7d8

This issue was referenced by blender/blender-addons-contrib@289c5de7d8c8f346832cb55754fb82e11f8377a4

This issue was referenced by 289c5de7d8

This issue was referenced by 289c5de7d8c8f346832cb55754fb82e11f8377a4

Added subscriber: @brecht

Added subscriber: @brecht

I fixed this bug without noticing it was assigned already, sorry about that, hope you didn't work on a fix yet.

I fixed this bug without noticing it was assigned already, sorry about that, hope you didn't work on a fix yet.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 289c5de7d8.

Closed by commit 289c5de7d8.

Added subscriber: @Geoffroykrantz

Added subscriber: @Geoffroykrantz

brecht:
In your commit I see you change this
RNA_def_property_ui_text(prop, "Material Slot", "Material slot used for rendering particles");
for this
RNA_def_property_ui_text(prop, "Material Slot", "Material nlot used for rendering particles");

"nlot" instead "slot"

brecht: In your commit I see you change this RNA_def_property_ui_text(prop, "Material Slot", "Material slot used for rendering particles"); for this RNA_def_property_ui_text(prop, "Material Slot", "Material nlot used for rendering particles"); "nlot" instead "slot"

Fixed, thanks for spotting that.

Fixed, thanks for spotting that.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38359
No description provided.